--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "5.2.0" apply false
+    id "com.github.johnrengelman.shadow" version "7.0.0"
 }
 
 
