--- a/mainPlugin/build.gradle
+++ b/mainPlugin/build.gradle
@@ -20,19 +20,18 @@ gradlePlugin {
     }
 }
 
-//pluginBundle {
-//    ext['gradle.publish.key'] = System.getenv('gradle.publish.key')
-//    ext['gradle.publish.secret'] = System.getenv('gradle.publish.secret')
-//    website = 'https://github.com/Iltotore/ManaDrop'
-//    vcsUrl = 'https://github.com/Iltotore/ManaDrop'
-//    description = 'A Gradle plugin for Minecraft Development'
-//    tags = ['minecraft', 'spigot', 'bungeecord']
-//    plugins {
-//        manadrop {
-//            displayName = 'ManaDrop'
-//        }
-//    }
-//}
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/Metric-Void/ManadropFix")
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
 
 shadowJar {
     configurations = [project.configurations.shadow]
