Add manual trigger, change version number.

--- a/mainPlugin/build.gradle
+++ b/mainPlugin/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'java-gradle-plugin'
 }
 
-version = '1.0'
+version = '0.5-SNAPSHOT'
 
 dependencies {
     implementation gradleApi()
