--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'com.github.johnrengelman.shadow'
 
-    group 'fr.il_totore'
+    group 'com.metricv'
 
     sourceCompatibility = 1.8
 
