--- a/mainPlugin/build.gradle
+++ b/mainPlugin/build.gradle
@@ -22,19 +22,19 @@ gradlePlugin {
 
 publishing {
     repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/Metric-Void/ManadropFix")
-            credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
-            }
-        }
+//        maven {
+//            name = "GitHubPackages"
+//            url = uri("https://maven.pkg.github.com/Metric-Void/ManadropFix")
+//            credentials {
+//                username = System.getenv("GITHUB_ACTOR")
+//                password = System.getenv("GITHUB_TOKEN")
+//            }
+//        }
         maven {
             // here your PROVIDE the PROJECT-URI for publishing your package
             // in the project-specific package-space which is also visible at
             // the group scope above
-            url =  uri("https://gitlab.com/api/v4/projects/28955808/packages/maven")
+            url =  uri("${System.getenv("CI_API_V4_URL")}/projects/${System.getenv("CI_PROJECT_ID")}/packages/maven")
             name = "Gitlab"
             credentials(HttpHeaderCredentials) {
                 name = "Job-Token"
